--- a/experiment.html
+++ b/experiment.html
@@ -1,58 +1,62 @@
 <!doctype html>
 <html>
-    <head>
-        <title>My experiment</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="jspsych-5.0.3/jspsych.js"></script>
-        <script src="jspsych-5.0.3/plugins/jspsych-text.js"></script>
-		<script src="jspsych-5.0.3/plugins/jspsych-single-stim.js"></script>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link href="jspsych-5.0.3/css/jspsych.css" rel="stylesheet" type="text/css"></link>
-    </head>
-    <body>
-    </body>
-    <script>
 
-	/* define welcome message block */
-    var welcome_block = {
-      type: "text",
-      text: "실험 참가를 환영합니다. 아무키나 눌러 시작하시오."
-	
-    };
-	
+<head>
+  <title>My experiment</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="jspsych-5.0.3/jspsych.js"></script>
+  <script src="jspsych-5.0.3/plugins/jspsych-text.js"></script>
+  <script src="jspsych-5.0.3/plugins/jspsych-single-stim.js"></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <link href="jspsych-5.0.3/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+</head>
+
+<body>
+</body>
+<script>
+  /* define welcome message block */
+  var welcome_block = {
+    type: "text",
+    text: "실험 참가를 환영합니다. 아무키나 눌러 시작하시오."
+
+  };
+
   /* define instructions block */
   var instructions_block = {
     type: "text",
     text: "<p>In this experiment, a circle will appear in the center " +
-        "of the screen.</p><p>If the circle is <strong>blue</strong>, " +
-        "press the letter F on the keyboard as fast as you can.</p>" +
-        "<p>If the circle is <strong>orange</strong>, do not press " +
-        "any key.</p>" +
-        "<div class='left center-content'><img src='img/blue.png'></img>" +
-        "<p class='small'><strong>Press the F key</strong></p></div>" +
-        "<div class='right center-content'><img src='img/orange.png'></img>" +
-        "<p class='small'><strong>Do not press a key</strong></p></div>" +
-        "<p>Press any key to begin.</p>",
+      "of the screen.</p><p>If the circle is <strong>blue</strong>, " +
+      "press the letter F on the keyboard as fast as you can.</p>" +
+      "<p>If the circle is <strong>orange</strong>, do not press " +
+      "any key.</p>" +
+      "<div class='left center-content'><img src='img/blue.png'></img>" +
+      "<p class='small'><strong>Press the F key</strong></p></div>" +
+      "<div class='right center-content'><img src='img/orange.png'></img>" +
+      "<p class='small'><strong>Do not press a key</strong></p></div>" +
+      "<p>Press any key to begin.</p>",
     timing_post_trial: 2000
   };
 
   /* define test block */
 
-  var test_stimuli = [
-    {
+  var test_stimuli = [{
       stimulus: "img/blue.png",
-      data: { response: 'go' }
+      data: {
+        response: 'go'
+      }
     },
     {
       stimulus: "img/orange.png",
-      data: { response: 'no-go' }
+      data: {
+        response: 'no-go'
+      }
     }
   ];
 
   var all_trials = jsPsych.randomization.repeat(test_stimuli, 10);
 
-  var post_trial_gap = function() {
-    return Math.floor( Math.random() * 1500 ) + 750;
+  var post_trial_gap = function () {
+    return Math.floor(Math.random() * 1500) + 750;
   }
 
   var test_block = {
@@ -60,14 +64,16 @@
     choices: ['F'],
     timing_response: 1500,
     timing_post_trial: post_trial_gap,
-    on_finish: function(data){
+    on_finish: function (data) {
       var correct = false;
-      if(data.response == 'go' && data.rt > -1){
+      if (data.response == 'go' && data.rt > -1) {
         correct = true;
-      } else if(data.response == 'no-go' && data.rt == -1){
+      } else if (data.response == 'no-go' && data.rt == -1) {
         correct = true;
       }
-      jsPsych.data.addDataToLastTrial({correct: correct});
+      jsPsych.data.addDataToLastTrial({
+        correct: correct
+      });
     },
     timeline: all_trials
   };
@@ -84,7 +90,7 @@
     for (var i = 0; i < trials.length; i++) {
       if (trials[i].correct == true) {
         correct_trial_count++;
-        if(trials[i].rt > -1){
+        if (trials[i].rt > -1) {
           sum_rt += trials[i].rt;
           correct_rt_count++;
         }
@@ -98,12 +104,12 @@
 
   var debrief_block = {
     type: "text",
-    text: function() {
+    text: function () {
       var subject_data = getSubjectData();
-      return "<p>You responded correctly on "+subject_data.accuracy+"% of "+
-      "the trials.</p><p>Your average response time was <strong>" +
-      subject_data.rt + "ms</strong>. Press any key to complete the "+
-      "experiment. Thank you!</p>";
+      return "<p>You responded correctly on " + subject_data.accuracy + "% of " +
+        "the trials.</p><p>Your average response time was <strong>" +
+        subject_data.rt + "ms</strong>. Press any key to complete the " +
+        "experiment. Thank you!</p>";
     }
   };
 
@@ -117,10 +123,28 @@
   /* start the experiment */
   jsPsych.init({
     timeline: timeline,
-    on_finish: function() {
+    on_finish: function () {
+      var info = getParticipantInfo();
       jsPsych.data.displayData();
-      jsPsych.data.localSave('mydata.csv', 'csv');
+      var filename = ['data', info.id, info.name, info.email, (new Date()).getTime()].join('-') + '.csv';
+      jsPsych.data.localSave(filename, 'csv');
     }
   });
 </script>
+<script>
+  function getParticipantInfo() {
+    return decodeURI(location.search) // decode query parameters
+      .substring(1) // remove '?'
+      .split('&') // split parameters
+      .map(function (token) {
+        return token.split('='); // split key and value
+      })
+      .reduce(function (out, item) {
+        if (item[0].length == 0) return out;
+        out[item[0]] = item[1];
+        return out;
+      }, {}); // collect into an object
+  }
+</script>
+
 </html>
